--- a/front/package.json
+++ b/front/package.json
@@ -15,9 +15,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.3",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.0",
+    "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
